# 3d-pismena

./: index.html  package.json  svetelne-pismena.html
.github/workflows/: build-windows.yml
ChannelLettersWin/: .gitignore  README.md
ChannelLettersWin/src-tauri/: Cargo.toml  tauri.conf.json
ChannelLettersWin/src-tauri/capabilities/: default.json
ChannelLettersWin/src-tauri/resources/: channel-letters.enc
ChannelLettersWin/src-tauri/src/: bundle.rs  download_bridge.js  hardware_id.rs  keychain.rs  license.rs  main.rs  trial.rs
api/: trial.js
