[package]
name = "channelletters"
version = "1.0.15"
description = "ChannelLetters — DXF to STL for illuminated channel letters"
authors = ["Miloš Kráľ <kralmilos@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Crypto
aes-gcm = "0.10"
sha2 = "0.10"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "std"] }
base64 = "0.22"
hex = "0.4"
# HTTP for trial server
ureq = { version = "2", features = ["json", "tls"] }
# Windows-specifics
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
